// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LineEndpointLabel snapshots > should render the endpoint icon with its label 1`] = `
<DocumentFragment>
  <span
    class="_LineEndpointLabel_32e9cc"
  >
    <svg
      class="Icon"
      data-fpl-icon-size="24"
      fill="none"
      height="24"
      style="color: var(--color-neutral-1);"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M10 7a5 5 0 0 0 0 10h8.5a.5.5 0 0 0 0-1H10a4 4 0 0 1 0-8h8.5a.5.5 0 0 0 0-1z"
        data-svg-property="fill"
        fill="white"
      />
      <path
        d="M17.797 11.5a.5.5 0 1 0 0 1h.703a.5.5 0 0 0 0-1zm-3.75 0a.5.5 0 1 0 0 1h1.406a.5.5 0 1 0 0-1zM11 11.5a.5.5 0 0 0 0 1h.703a.5.5 0 1 0 0-1z"
        data-svg-property="fill"
        fill="white"
        opacity="0.4"
      />
    </svg>
    Round
  </span>
</DocumentFragment>
`;

exports[`LineEndpointLabel snapshots > should render the icon turned around for an end point 1`] = `
<DocumentFragment>
  <span
    class="_LineEndpointLabel_32e9cc"
  >
    <svg
      class="Icon _LineEndpointLabel__icon--flipped_32e9cc"
      data-fpl-icon-size="24"
      fill="none"
      height="24"
      style="color: var(--color-neutral-1);"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        clip-rule="evenodd"
        d="M9.47 8.152A1 1 0 0 1 11 9v2h7.5a.5.5 0 1 1 0 1H11v2a1 1 0 0 1-1.53.848l-4-2.5a1 1 0 0 1 0-1.696zm.53 2.027V9l-1 .625-2.057 1.285L6 11.5l.943.59L9 13.375 10 14z"
        data-svg-property="fill"
        fill="white"
        fill-rule="evenodd"
      />
    </svg>
    Triangle arrow
  </span>
</DocumentFragment>
`;
